[project]
name = "advancednlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Goncalves",email = "bgoncalves@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch==2.3.1",
    "torchtext==0.18.0",
    "torchview>=0.2.7",
    "torchvision==0.18.1",
    "tqdm>=4.66.1",
    "watermark>=2.4.3",
]

